search : a blank rectangle for editing no longer overlaps with bottom border of rectangle, ceasing to hide it

--- a/src/general/Search/Search.css
+++ b/src/general/Search/Search.css
@@ -1,5 +1,5 @@
 .rbt {
-    height: 100%;
+    height: 94%; 
     width: 100%;
     max-height: calc(var(--navigation-height) - 2px);
 }
